# aipilot

./: .gitignore  .pre-commit-config.yaml  .pylintrc  2025-06-29_IT_News.md  2025-06-29_IT_News_Magazine.md  Dockerfile  REFACTORING_GUIDE.md  app.config.sample  app.config.template  app.py  declue_issue_comments.md  demo_ssh_terminal.py  dspilot_cli.py  hello.py  keyboard_test.py  llm_profiles.json.sample  mcp.json.template  mcp.md  mcp.sample.json  pty_size_test.py  pyproject.toml  pytest.ini  quick_terminal_check.py  requirements.txt  run_ssh_terminal.py  ssh_basic_test.py  ssh_connection_diagnostic.py  task.json.sample  test.env  test_dspilot_terminal.py  test_terminal_size.py  vi_debug_commands.py  vi_key_test.py
.cursor/rules/: dspilot-cli.mdc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-and-release.yml  ci.yml  codeql.yml  dependency-review.yml  docker.yml  docs.yml  labeler.yml  pylint.yml
.windsurf/rules/: aipilot-guideline.md
application/: __init__.py  app.py
application/api/: api_server.py  fastapi_thread.py
application/cli/: cli_app.py
application/config/: README.md  __init__.py  app_config_manager.py  base_config_manager.py  config_change_notifier.py  config_manager.py  default_app_config.py  default_llm_profiles.py  examples.py  github_notification_config.py  llm_profile_manager.py  mcp_config_manager.py  migrated_managers.py  registry.py  unified_config_manager.py  validators.py
application/llm/: README.md  USAGE_EXAMPLES.md  __init__.py  llm_agent.py
application/tasks/: __init__.py  exceptions.py  task_manager.py  task_thread.py
application/ui/: __init__.py  ai_chat_bubble.py  chat_bubble.py  main_window.py  (+8 more)
docs/: conf.py  index.rst  installation.rst
dspilot_app/: __main__.py  app.py
dspilot_cli/: GUIDELINE.md  __init__.py  __main__.py  cli_app.py  cli_application.py  cli_command_handler.py  cli_main.py  cli_mode_handler.py  cli_query_processor.py  constants.py  conversation_manager.py  dspilot_cli.py  exceptions.py  execution_manager.py  interaction_manager.py  output_manager.py  plan_evaluator.py  plan_history_manager.py  plan_refiner.py  planning_service.py  refactored_cli.py  response_generator.py  session.py  step_executor.py  summary_utils.py  system_manager.py
dspilot_notebook/: GUIDELINE.md  app_simple.py  main.py
dspilot_release/: .gitignore  README.md  cli_release.py
dspilot_shell/: PROJECT_SUMMARY.md  README.md  __init__.py  ansi_parser.py  app.py  main_window.py
examples/: agent_workflow_demo.py
github_webhook_server/: .env.example  README.md  app.py  main.py  requirements.txt  simulator.py  test_webhook.py  webhook_app.py
instructions/: default_agent_instructions.txt  openai_agent_instructions.txt
practices/: problem.py
tests/: __init__.py  conftest.py
tools/: .gitattributes  __init__.py
webhook/: app.py  models.py  requirements.txt
(+444 files in other folders)
